test ex-push